<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.dowoom.viewmodel.registervm.RegisterViewmodel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.register.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nanumgothic"
        android:padding="1dp"
        android:textSize="25sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/register_phone_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="1dp"
        android:fontFamily="@font/nanum_bold"
        android:text="@string/register_phone_2"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={vm.etPhoneNum}"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/btGetAuthNumber"
        android:layout_width="0dp"
        android:background="@drawable/rounded_corner"
        android:layout_height="40sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textColor="@color/custom_almost_whit_1"
        android:text="@string/register_auth_number"
        android:onClick="@{() -> vm.requestAuth()}"
        app:layout_constraintEnd_toEndOf="@+id/filledTextField"
        app:layout_constraintStart_toStartOf="@+id/filledTextField"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

    <LinearLayout
        android:id="@+id/registerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGetAuthNumber">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nanumgothic"
            android:textColor="@color/custom_dark_blue_1"
            android:padding="1dp"
            android:text="@string/register_text_auth"
            android:layout_marginHorizontal="20sp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btGetAuthNumber"
            app:layout_constraintTop_toBottomOf="@+id/btGetAuthNumber" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFields"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="16dp"
            android:hint="@string/input_auth"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@={vm.etAuthNum}"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvReGetAuthNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/custom_light_red_1"
            android:padding="1dp"
            android:text="@string/regiser_re_auth"
            android:onClick="@{() -> vm.requestAuth()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/etAuthNumber" />

        <TextView
            android:id="@+id/btPutAuthNumber"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="16dp"
            android:text="@string/register_auth"
            android:textSize="16dp"
            android:textColor="@color/custom_almost_whit_1"
            android:gravity="center"
            android:onClick="@{() -> vm.authComplete()}"
            app:layout_constraintEnd_toEndOf="@+id/etAuthNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etAuthNumber"
            app:layout_constraintTop_toBottomOf="@+id/tvReGetAuthNumber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:fontFamily="@font/nanum_bold"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="휴대폰 번호가 변경되었나요?" />

        <TextView
            android:id="@+id/tvFindByEmail"
            android:layout_marginStart="10sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이메일로 계정 찾기" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>